argo-events/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-events
  annotations:
    linkerd.io/inject: enabled
