argo-events/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-events
  namespace: argo-events
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`events.claytonc.dev`)
      kind: Rule
      middlewares:
        - name: traefik-local-whitelist@kubernetescrd
      services:
      - name: argo-rollouts-dashboard
        port: 3100
        # scheme: https
        # serversTransport: insecure-skip-verify
  tls:
    secretName: rollouts-tls

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: ServersTransport
# metadata:
#   name: insecure-skip-verify
#   namespace: argocd
# spec:
#   insecureSkipVerify: true
